@@ -20,7 +20,6 @@ package net.bull.javamelody.internal.model;
 import java.io.Serializable;
 import java.sql.Connection;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -70,14 +69,13 @@ public class ConnectionInformations implements Serializable {
 			return Collections.emptyList();
 		}
 		final List<StackTraceElement> stackTrace = new ArrayList<>(
-				Arrays.asList(openingStackTrace));
+				List.of(openingStackTrace));
 		// on enlève les premiers éléments qui sont forcément ceux de javamelody
 		// (Thread.getStackTrace(), constructeur ConnectionInformations,
 		// JdbcWrapper.createConnectionProxy, appelant de createConnectionProxy...)
-		stackTrace.remove(0);
-		while (stackTrace.get(0).getClassName().startsWith(OWN_PACKAGE)) {
-			stackTrace.remove(0);
-		}
+        do {
+            stackTrace.remove(0);
+        } while (stackTrace.get(0).getClassName().startsWith(OWN_PACKAGE));
 		return stackTrace;
 	}
 
