@@ -21,10 +21,10 @@ import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Serializable;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -589,8 +589,7 @@ public class CollectorController { // NOPMD
 		return collectorServer.collectForApplicationForAction(application, actionUrls);
 	}
 
-	public String getApplication(HttpServletRequest req, HttpServletResponse resp)
-			throws UnsupportedEncodingException {
+	public String getApplication(HttpServletRequest req, HttpServletResponse resp) {
 		// on utilise un cookie client pour stocker l'application
 		// car la page html est faite pour une seule application sans passer son nom en paramètre des requêtes
 		// et pour ne pas perdre l'application choisie entre les reconnexions
@@ -599,7 +598,7 @@ public class CollectorController { // NOPMD
 			// pas de paramètre application dans la requête, on cherche le cookie
 			final Cookie cookie = httpCookieManager.getCookieByName(req, COOKIE_NAME);
 			if (cookie != null) {
-				application = URLDecoder.decode(cookie.getValue(), "UTF-8");
+				application = URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8);
 				if (!collectorServer.isApplicationDataAvailable(application)) {
 					cookie.setMaxAge(-1);
 					resp.addCookie(cookie);
@@ -616,7 +615,7 @@ public class CollectorController { // NOPMD
 			// En Tomcat, le cookie doit être conforme à la RFC 6265 (pas d'espace, ...)
 			// see org.apache.tomcat.util.http.Rfc6265CookieProcessor
 			httpCookieManager.addCookie(req, resp, COOKIE_NAME,
-					URLEncoder.encode(application, "UTF-8"));
+					URLEncoder.encode(application, StandardCharsets.UTF_8));
 		}
 		return application;
 	}
