@@ -24,7 +24,6 @@ import static org.easymock.EasyMock.verify;
 import static org.junit.Assert.assertNotNull;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -78,16 +77,12 @@ public class TestTomcatInformations {
 		/** {@inheritDoc} */
 		@Override
 		public Map<Object, Object> getmemoryUsage() {
-			return new LinkedHashMap<>() {
-				private static final long serialVersionUID = 1L;
-
-				{
-					this.put("committed", 1);
-					this.put("init", 10);
-					this.put("max", 100);
-					this.put("used", 1000);
-				}
-			};
+			final LinkedHashMap<Object, Object> map = new LinkedHashMap<>();
+			map.put("committed", 1);
+			map.put("init", 10);
+			map.put("max", 100);
+			map.put("used", 1000);
+			return map;
 		}
 
 		/** {@inheritDoc} */
@@ -126,7 +121,6 @@ public class TestTomcatInformations {
 		 */
 		int getmaxThreads();
 
-		/** {@inheritDoc} */
 		/**
 		 * attribut memoryUsage.
 		 * @return MemoryUsage
@@ -305,7 +299,7 @@ public class TestTomcatInformations {
 			}
 
 			final Counter counter = new Counter("http", null);
-			final Collector collector = new Collector("test", Arrays.asList(counter));
+			final Collector collector = new Collector("test", List.of(counter));
 			final ServletContext context = createNiceMock(ServletContext.class);
 			expect(context.getServerInfo()).andReturn("Mock").anyTimes();
 			expect(context.getMajorVersion()).andReturn(5).anyTimes();
