@@ -25,7 +25,6 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 import java.io.StringWriter;
-import java.util.Arrays;
 import java.util.List;
 
 import javax.naming.Binding;
@@ -109,7 +108,7 @@ public class TestHtmlJndiTreeReport {
 		expect(enumeration.hasMore()).andReturn(true).times(7);
 		expect(enumeration.next()).andReturn(new Binding("test value", "test")).once();
 		expect(enumeration.next()).andReturn(new Binding("test value collection",
-				Arrays.asList("test collection", "test collection"))).once();
+				List.of("test collection", "test collection"))).once();
 		expect(enumeration.next())
 				.andReturn(new Binding("test context", createNiceMock(Context.class))).once();
 		expect(enumeration.next()).andReturn(new Binding("", "test")).once();
