@@ -28,7 +28,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -113,7 +112,7 @@ public class TestPdfOtherReport {
 				Collections.singleton(new Object()));
 		sessions.add(new SessionInformations(serializableButNotSession, false));
 		PdfOtherReport pdfOtherReport = new PdfOtherReport(TEST_APP, output);
-		pdfOtherReport.writeSessionInformations(Collections.<SessionInformations> emptyList());
+		pdfOtherReport.writeSessionInformations(Collections.emptyList());
 		assertNotEmptyAndClear(output);
 
 		pdfOtherReport = new PdfOtherReport(TEST_APP, output);
@@ -291,7 +290,7 @@ public class TestPdfOtherReport {
 		final ByteArrayOutputStream output = new ByteArrayOutputStream();
 		final PdfOtherReport pdfOtherReport = new PdfOtherReport(TEST_APP, output);
 		final Counter counter = new Counter("services", null);
-		final Collector collector = new Collector(TEST_APP, Arrays.asList(counter));
+		final Collector collector = new Collector(TEST_APP, List.of(counter));
 		pdfOtherReport.writeCounterSummaryPerClass(collector, counter, null,
 				Period.TOUT.getRange());
 		assertNotEmptyAndClear(output);
@@ -304,7 +303,7 @@ public class TestPdfOtherReport {
 		final ByteArrayOutputStream output = new ByteArrayOutputStream();
 		final PdfOtherReport pdfOtherReport = new PdfOtherReport(TEST_APP, output);
 		final Counter counter = new Counter("services", null);
-		final Collector collector = new Collector(TEST_APP, Arrays.asList(counter));
+		final Collector collector = new Collector(TEST_APP, List.of(counter));
 		final long timeOfSnapshot = System.currentTimeMillis();
 		final List<CounterRequestContext> requests = Collections.emptyList();
 		final JavaInformations javaInformations = new JavaInformations(null, true);
@@ -334,7 +333,7 @@ public class TestPdfOtherReport {
 		sqlCounter.addRequest("sql1", 100, 100, 100, false, -1);
 		httpCounter.addRequest("test 1", 0, 0, 0, false, 1000);
 		errorCounter.addRequestForSystemError("test error", 0, 0, 0, " a stack-trace");
-		collector.collectWithoutErrors(Arrays.asList(javaInformations));
+		collector.collectWithoutErrors(List.of(javaInformations));
 		final String requestId = httpCounter.getRequests().get(0).getId();
 		final String requestId2 = errorCounter.getRequests().get(0).getId();
 
